<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserLoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_60dp"
        android:orientation="vertical">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/profileIv"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_padding"
            android:layout_marginBottom="@dimen/activity_padding"
            android:scaleType="centerCrop"
            android:src="@drawable/fabrentoappicon"
            app:civ_border_color="@android:color/background_light"
            app:civ_border_width="2dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/welcome"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/black"
            android:textStyle="italic" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="@dimen/dimen_40dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/registerbackground"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/drawable_edittext"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_email_black_24dp" />

            <EditText
                android:id="@+id/etuseremail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:background="@android:color/transparent"
                android:hint="@string/email_address"
                android:text=""
                android:textAppearance="?android:textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/drawable_edittext"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/forgat_lock" />

            <EditText
                android:id="@+id/etpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="5dp"
                android:background="@android:color/transparent"

                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAppearance="?android:textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:padding="5dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/forgat_lock" />

                <TextView
                    android:id="@+id/tvforgot"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:gravity="center"
                    android:text="@string/forgot_password"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/blue_grey"
                    android:textStyle="normal" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/btnlogin"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_background_round"
            android:gravity="center_vertical"
            android:text="@string/next"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:ignore="RtlCompat" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="@dimen/dimen_15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/dont"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/blue_grey"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tvsignup"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/red"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>